--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: Matthew Baeckelandt
 navbar-links:
   Resume: "https://bakeland5.github.io/MatthewBaeckelandtResume.pdf"
   Projects:
-    - UIUC GPA Visualization: "aboutme"
+    - UIUC GPA Visualization: "data_viz/index.html"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
