--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ navbar-links:
   Resume: "https://bakeland5.github.io/MatthewBaeckelandtResume.pdf"
   Projects:
     - UIUC GPA Visualization: "data_viz/index.html"
+    - UIUC College/Major Enrollment Visualization: "project1-master/index.html"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
